--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,11 @@ button {
     font-family: 'Dosis', sans-serif;
 }
 
+input:hover, button:hover {
+    border-radius: 5px;
+    background: lightgray;
+}
+
 /* results */
 #results h1 {
     font-family: 'Francois One', sans-serif;
@@ -45,11 +50,19 @@ button {
 }
 
 #searchArticles, #randomArticles {
+    color: black;
     border: 1px solid black;
     max-width: 90vw;
     display: block;
     margin: 5vh auto;
-    padding: 0 1.5vw 0 1.5vw;
+    padding: 1.5vw;
+    transition: all ease 0.3s;
+}
+
+#searchArticles:hover, #randomArticles:hover {
+    background: lightgray;
+    border-radius: 5px;
+    transform: scale(1.005);
 }
 
 a {
